# EVIX

./: .gitignore  .gitmodules  README.MD  README.md  add-remote-ip.php  approve_peer.php  approve_peer.sh  birdc6.sh  generate-graphs.sh  generateOpenVPN.sh  generate_config.sh  graph.inc.php  graph.php  librenms-graphs.sh  peers-json.php  peers-status.php  peers-status6.sh  pull_peers.sh  pull_users.php  reboot.sh  test.txt  update_peers_website.php  update_peers_website.sh
admin/: hasv4.sh  interact  interact.save  mysql  zt
config/: bashrc.sh  brycerc.sh  keys.txt  symlinks.sh  sysctl.conf
config/alice-lg/: alice.conf
config/ansible/: hosts
config/arouteserver/: arouteserver.yml  clients.yml.bak  general.distrib.yml  general.yml  log.ini  rtt_getter.sh
config/bird/: header.local
config/birdwatcher/: birdwatcher.conf
config/borgmatic/: borgmatic.cron  config_master.yaml  config_tserv.yaml
config/ccd/: as_131669  as_131670  as_134563  as_135103  as_137410  as_137909  as_137937  as_138910  as_138926  as_138980  as_139233  (+92 more)
remote-scripts/: .gitignore  README.md  runRemoteScript
run/bird-rtrlib-cli-0.1.1/: CMakeCache.txt  CMakeLists.txt  Makefile  README  bird-rtrlib-cli  bird-rtrlib-cli.c  bird.c  bird.h  cli.c  cli.h  cmake_install.cmake  config.c  config.h  rtr.c  rtr.h
run/bird-rtrlib-cli-0.1.1/cmake/modules/: FindArgp.cmake  FindLibSSH.cmake  FindRtr.cmake
scripts/: approve_peer.php  configure_bird.sh  get-val.sh  hostname.sh  ip.sh  ip2long.php  jqconf.jq  monitor.sh
tunnels/: approve_peer  eoip  find_peer  mysql  openvpn  vxlan  zerotier
(+10402 files in other folders)
